--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.2",
+    "vuetable-2": "^1.7.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
