--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "font-awesome": "^4.7.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.8.2",
     "vue2-google-maps": "^0.10.2",
     "vuetable-2": "^1.7.5",
     "vuex": "^3.0.1"
