--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.11",
+    "aws-amplify-vue": "^0.1.8",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "font-awesome": "^4.7.0",
@@ -22,6 +24,7 @@
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
+    "vue-cli-plugin-amplify": "^0.1.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -47,5 +50,18 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "pkg": {
+    "dependencies": {
+      "aws-amplify": "latest",
+      "aws-appsync": "latest",
+      "graphql": "latest",
+      "vue-apollo": "latest",
+      "vue-router": "latest"
+    },
+    "devDependencies": {
+      "graphql-tag": "^2.9.0",
+      "eslint-plugin-graphql": "^2.1.0"
+    }
+  }
 }
