--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17",
+    "vue-instant": "^1.0.2",
+    "vue-morris": "0.0.13",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.8.2",
     "vue2-google-maps": "^0.10.2",
@@ -24,6 +27,7 @@
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
+    "googleplaces": "^0.6.1",
     "vue-cli-plugin-amplify": "^0.1.0",
     "vue-template-compiler": "^2.5.17"
   },
