--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "lodash.debounce": "^4.0.8",
     "vue": "^2.5.17",
     "vue-instant": "^1.0.2",
     "vue-morris": "0.0.13",
